# Emumet

./: .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  compose.ap-e2e.yml  compose.yml  flake.nix  justfile  openapi.json
.claude/: settings.json
.intent-cli/: config.toml  host-binding.toml  queue-state.json  runs.jsonl
.review/: keycloak-to-ory-migration.md
adapter/: Cargo.toml
adapter/src/: lib.rs  (+3 more)
application/: Cargo.toml
application/src/: lib.rs  permission.rs  service.rs  signing_key.rs  transfer.rs
application/src/crypto/: algorithm.rs  encryption.rs  key_pair.rs  mod.rs  password.rs  rsa.rs
application/src/service/: account.rs  activitypub.rs  auth_account.rs  block.rs  metadata.rs  mute.rs  profile.rs
application/src/service/account/: create.rs  deactivate.rs  mod.rs  moderation.rs  read.rs  rehydrate.rs  update.rs
application/src/service/account_detail/: fields.rs  mod.rs  read.rs  update.rs  validate.rs
application/src/service/activitypub/: actor.rs  collections.rs  delivery.rs  fetch.rs  mod.rs  outbound_follow.rs  outbox.rs  remote_actor.rs
application/src/service/activitypub/inbox/: handlers.rs  mod.rs
application/src/transfer/: account.rs  activitypub.rs  auth_account.rs  block_mute.rs  metadata.rs  pagination.rs  profile.rs
docker-entrypoint-initdb.d/: 01-create-databases.sh
driver/: Cargo.toml
driver/src/: database.rs  error.rs  http_signing.rs  keto.rs  lib.rs
driver/src/crypto/: ed25519.rs  encryption.rs  mod.rs  password.rs  rsa.rs
driver/src/database/: account.rs  follow.rs  metadata.rs  postgres.rs  profile.rs  redis.rs
driver/src/database/postgres/: account.rs  account_event.rs  account_event_store.rs  auth_account.rs  auth_account_event_store.rs  auth_host.rs  block.rs  event.rs  follow.rs  image.rs  metadata.rs  metadata_event.rs  metadata_event_store.rs  mute.rs  outbox_activity.rs  profile.rs  profile_event.rs  profile_event_store.rs  remote_account.rs  signing_key.rs  stellar_account.rs  stellar_account_event.rs  stellar_host.rs
driver/src/database/postgres/account/: mod.rs  row.rs  tests.rs
driver/src/http_signing/: actor_key.rs  fetch.rs  mod.rs  signer.rs  ssrf.rs  tests.rs  verifier.rs
driver/src/http_signing/cavage/: mod.rs  parser.rs
e2e/: check-mastodon.sh  run-ap-e2e.sh
kernel/: Cargo.toml
kernel/src/: activitypub.rs  config.rs  crypto.rs  database.rs  entities.rs  entity.rs  error.rs  event.rs  event_store.rs  http_signing.rs  id.rs  lib.rs  modify.rs  permission.rs  query.rs  repository.rs  signal.rs
kernel/src/entities/: account.rs  common.rs  stellar_account.rs
kernel/src/entities/account/: access_token.rs  host.rs  id.rs  is_bot.rs  name.rs  refresh_token.rs
kernel/src/entities/common/: id.rs
kernel/src/entities/stellar_account/: access_token.rs  id.rs  refresh_token.rs
kernel/src/entities/time/: created_at.rs
kernel/src/entity/: account.rs  auth_account.rs  auth_host.rs  block.rs  common.rs  event.rs  follow.rs  image.rs  metadata.rs  mute.rs  profile.rs  remote_account.rs  signing_key.rs  stellar_account.rs  stellar_host.rs
kernel/src/entity/account/: domain.rs  id.rs  is_bot.rs  moderation_reason.rs  name.rs  private_key.rs  public_key.rs  status.rs
kernel/src/entity/activitypub/: mod.rs  outbox_activity.rs  outbox_activity_id.rs
kernel/src/entity/auth_account/: client_id.rs  id.rs
kernel/src/entity/auth_host/: id.rs  url.rs
kernel/src/entity/block/: id.rs  target_id.rs
kernel/src/entity/common/: created_at.rs  deleted_at.rs  field_action.rs  nanoid.rs
kernel/src/entity/event/: id.rs  version.rs
kernel/src/entity/follow/: approved_at.rs  id.rs  target_id.rs
kernel/src/entity/image/: blurhash.rs  hash.rs  id.rs  url.rs
kernel/src/entity/metadata/: content.rs  id.rs  label.rs
kernel/src/entity/mute/: id.rs  target_id.rs
kernel/src/entity/profile/: banner.rs  display_name.rs  icon.rs  id.rs  summary.rs
kernel/src/entity/remote_account/: acct.rs  id.rs  url.rs
kernel/src/entity/stellar_account/: access_token.rs  client_id.rs  host.rs  id.rs  refresh_token.rs
kernel/src/entity/stellar_host/: id.rs  url.rs
kernel/src/event_store/: account.rs  auth_account.rs  metadata.rs  profile.rs
kernel/src/modify/: account.rs  auth_account.rs  auth_host.rs  event.rs  follow.rs  image.rs  metadata.rs  profile.rs  remote_account.rs  stellar_account.rs  stellar_host.rs
kernel/src/query/: account.rs  auth_account.rs  auth_host.rs  event.rs  follow.rs  image.rs  metadata.rs  profile.rs  remote_account.rs  stellar_account.rs  stellar_host.rs
kernel/src/read_model/: account.rs  auth_account.rs  metadata.rs  profile.rs
kernel/src/repository/: account.rs  auth_host.rs  block.rs  follow.rs  image.rs  metadata.rs  mute.rs  outbox_activity.rs  profile.rs  remote_account.rs  stellar_account.rs  stellar_emumet_account.rs
kernel/src/test_utils/: account.rs  auth_account.rs  auth_host.rs  block.rs  event.rs  follow.rs  image.rs  metadata.rs  mod.rs  mute.rs  profile.rs  remote_account.rs
migrations/: 20230707210300_init.sql  20260308000000_account_events.sql  20260309000000_auth_account_events.sql  gensql.sh  (+10 more)
server/: Cargo.toml
server/src/: applier.rs  auth.rs  error.rs  handler.rs  hydra.rs  keycloak.rs  kratos.rs  main.rs  openapi.rs  permission.rs  route.rs  schema.rs
server/src/applier/: account_applier.rs  auth_account_applier.rs  metadata_applier.rs  profile_applier.rs
server/src/route/: account.rs  activitypub.rs  metadata.rs  oauth2.rs  profile.rs  signing.rs  test_mode.rs
server/src/route/account/: admin.rs  block_mute.rs  client.rs  follow.rs  mod.rs
server/src/route/activitypub/: actor.rs  collections.rs  discovery.rs  inbox.rs  mod.rs
server/src/route/oauth2/: consent.rs  login.rs  mod.rs
server/src/schema/: account.rs  activitypub.rs  metadata.rs  oauth2.rs  profile.rs
server/tests/: e2e_ap_iceshrimp.rs  e2e_ap_mastodon.rs  e2e_ap_mock.rs  e2e_basic_flow.rs  support.rs
server/tests/support/: account_helper.rs  ap_peer.rs  auth.rs  config.rs  db.rs  iceshrimp.rs  iceshrimp_setup.rs  mastodon.rs  mastodon_setup.rs  server.rs
(+106 files in other folders)
