[workspace]
members = [
  "application",
  "driver",
  "kernel",
  "server"
]

[workspace.dependencies]
tokio = "1.39.2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["serde", "v7"] }
time = { version = "0.3", features = ["serde"] }
nanoid = "0.4.0"

error-stack = "0.4.1"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["turtton"]
description = "AccountService for ShuttlePub"
documentation = "https://github.com/ShuttlePub/Emumet"
