[workspace]
members = [
  "application",
  "driver",
  "kernel",
  "server"
]

[workspace.dependencies]
tokio = "1.39.2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["serde", "v7"] }
time = { version = "0.3", features = ["serde"] }
nanoid = "0.4.0"
dotenvy = "0.15.7"

vodca = "0.1.8"
destructure = "0.5.6"

error-stack = "0.4.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }

test-with = "0.14.7"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["turtton"]
description = "AccountService for ShuttlePub"
documentation = "https://github.com/ShuttlePub/Emumet"
