[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { workspace = true }
vodca = { workspace = true }
serde = { workspace = true }

error-stack = { workspace = true }

# Cryptography
rsa = { version = "0.9", features = ["sha2", "pem"] }
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
serde_json = "1"
zeroize = "1.7"

kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
tempfile = "3"

uuid.workspace = true

driver.path = "../driver"