[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { workspace = true }
vodca = { workspace = true }
serde = { workspace = true }

error-stack = { workspace = true }
tracing = { workspace = true }

serde_json = "1"

adapter = { path = "../adapter" }
kernel = { path = "../kernel" }

[dev-dependencies]
kernel = { path = "../kernel", features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
tempfile = "3"

driver.path = "../driver"