[package]
name = "driver"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { workspace = true }
deadpool-redis = "0.12.0"
sqlx = { version = "0.7", features = ["uuid", "time", "postgres", "runtime-tokio-native-tls", "json"] }
serde_json = "1"
serde = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = "0.1"

vodca.workspace = true
error-stack = { workspace = true }

kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
test-with.workspace = true
