[package]
name = "driver"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { workspace = true }
deadpool-redis = "0.20.0"
sqlx = { version = "0.7", features = ["time", "postgres", "runtime-tokio-native-tls", "json"] }
serde_json = "1"
serde = { workspace = true }
time = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

vodca.workspace = true
error-stack = { workspace = true }

rsa = { version = "0.9", features = ["sha2", "pem"] }
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
zeroize = "1.7"

http = "1"
http-body-util = "0.1"
bytes = "1"
http-msgsign = { workspace = true }
http-msgsign-draft = { workspace = true }
ed25519-dalek = { workspace = true }

kernel = { path = "../kernel" }

[dev-dependencies]
kernel = { path = "../kernel", features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
test-with.workspace = true
tempfile = "3"
nanoid = { workspace = true }
