[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
destructure = "0.5.6"
vodca = "0.1.6"
serde = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

async-trait = "0.1"
error-stack = { workspace = true }

[features]
interfaces = []
prelude = []
default = ["prelude", "interfaces"]
uuid = []
time = []
