[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
destructure = { workspace = true }
vodca = { workspace = true }
serde = { workspace = true }
ferroid = { workspace = true }
time = { workspace = true }
nanoid = { workspace = true }
zeroize = "1.7"

async-trait = "0.1"
error-stack = { workspace = true }

[features]
interfaces = []
prelude = []
default = ["prelude", "interfaces"]
test-utils = []
