[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { workspace = true }

tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }

axum = { version = "0.7.4", features = ["json", "tracing"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "query"] }
tower-http = { version = "0.5.1", features = ["tokio", "cors"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

rikka-mq = { version = "0.1.1", features = ["redis", "tracing"] }
error-stack = { workspace = true }

vodca = { workspace = true }
serde = { workspace = true }

application = { path = "../application" }
driver = { path = "../driver" }
kernel = { path = "../kernel" }
