[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
url = { version = "2.5.4", features = [] }
dotenvy = { workspace = true}

tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }

axum = { version = "0.7.4", features = ["json", "tracing"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.1", features = ["tokio", "cors"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"

rikka-mq = { version = "0.1.3", features = ["redis", "tracing"] }
error-stack = { workspace = true }

vodca = { workspace = true }
destructure = { workspace = true }
serde = { workspace = true }

adapter = { path = "../adapter" }
application = { path = "../application" }
driver = { path = "../driver" }
kernel = { path = "../kernel" }

[dev-dependencies]
rand = "0.8"
rsa = { version = "0.9" }
base64 = "0.22"
